# api_catatan

./: Cargo.toml  readme.md
src/: auth.rs  config.rs  db.rs  error.rs  extractor.rs  main.rs  routes.rs
src/application/: mod.rs  note_service.rs  user_service.rs
src/domain/models/: api_response.rs  mod.rs  note.rs  user.rs
src/domain/repositories/: mod.rs  note_repository.rs  user_repository.rs
src/handlers/: mod.rs  note_handler.rs  user_handler.rs
src/infrastructure/repositories/: mod.rs  note_repository_impl.rs  user_repository_impl.rs
src/models/: api_response.rs  mod.rs  note_model.rs  user_model.rs
src/presentation/: extractor.rs  mod.rs  routes.rs
src/presentation/auth/: admin_auth_middleware.rs  auth_middleware.rs  mod.rs
src/presentation/handlers/: note_handler.rs  user_handler.rs
src/utils/: config.rs  db.rs  error.rs  mod.rs
