[package]
name = "api_catatan"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework Web Api
axum = "0.8.6"

# Waktu dan Tanggal
chrono = { version = "0.4.42", features = ["serde"] }

# Konfigurasi data Environment
dotenvy = "0.15.7"

envy = "0.4.2"

# Serialisasi dan Deserialisasi JSON
serde = { version = "1.0.228", features = ["derive"] }

serde_json = "1.0.145"

# Database (Asynchronous mysql)
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }

# Runtime Asynchronous
tokio = { version = "1.48.0", features = ["full"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
