[package]
name = "api_catatan"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework Web Api
axum = "0.8.6"

# Untuk Hashing Password (aman & modern)
bcrypt = "0.17.1"

# Waktu dan Tanggal
chrono = { version = "0.4.42", features = ["serde"] }

# Konfigurasi data Environment
dotenvy = "0.15.7"

envy = "0.4.2"

# Untuk parsing durasi (berguna untuk .env)
humantime = "2.3.0"

# Untuk JWT (Membuat dan validasi token)
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# redis dengan fitur integrasi tokio
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }

# Serialisasi dan Deserialisasi JSON
serde = { version = "1.0.228", features = ["derive"] }

serde_json = "1.0.145"

# Database (Asynchronous mysql)
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }

# Runtime Asynchronous
tokio = { version = "1.48.0", features = ["full"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
