[package]
name = "api_catatan"
version = "0.1.0"
edition = "2021" # <-- UBAH ke edisi stabil

[dependencies]
async-trait = "=0.1.77" # <-- TAMBAHKAN '=' untuk versi persis
# Framework Web Api
axum = "=0.7.5" # <-- TAMBAHKAN '=' untuk versi persis

# Untuk Hashing Password (aman & modern)
bcrypt = "0.15.1"

# Waktu dan Tanggal
chrono = { version = "0.4.38", features = ["serde"] }

# Konfigurasi data Environment
dotenvy = "0.15.7"

envy = "0.4.2"

# Untuk parsing durasi (berguna untuk .env)
humantime = "2.1.0"

# Untuk JWT (Membuat dan validasi token)
jsonwebtoken = "9.3.0"

# redis dengan fitur integrasi tokio
redis = { version = "0.25.4", features = ["tokio-comp", "connection-manager"] }

# Serialisasi dan Deserialisasi JSON
serde = { version = "1.0.203", features = ["derive"] }

serde_json = "1.0.117"


# Database (Asynchronous mysql)
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }

# Runtime Asynchronous
tokio = { version = "1.37.0", features = ["full"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Validasi
validator = { version = "0.20.0", features = ["derive"] }
